(gilbertt)

Should have quashed all lag in E-SD. Please let me know

-------------------------------------------------------------------------------

Sun Nov 14 02:24:13 GMT 1999
(gilbertt)

Added new animation to E-SD, called history, it is responsive to sound, and
will hopefully keep StriderZ off my back for a day or two :P

-------------------------------------------------------------------------------

Sun Nov 14 02:53:54 GMT 1999
(gilbertt)

Added another animation to E-SD, "History Bar", its cooler.

-------------------------------------------------------------------------------

Mon Nov 15 12:30:13 PST 1999
(KainX)

Another morning, another cleanup.  Doesn't anyone use warning flags besides
me?

-------------------------------------------------------------------------------

Tue Nov 16 17:10:44 EST 1999
(StriderZ)

Added a textbox cursor.

-------------------------------------------------------------------------------

Wed Nov 17 14:18:42 PST 1999
(KainX)

Cleanups to the libgtop stuff.  Someone (Mark) please tell me if this doesn't
work on Solaris....

-------------------------------------------------------------------------------

Wed Nov 17 21:46:41 EST 1999
(StriderZ)

Made most of the functions in epplets/cloak.c non-static so that they can be 
accessed by other epplets. Also Added E-NetGraph, a wmnet wannabe epplet.

-------------------------------------------------------------------------------

Thu Nov 18 11:57:17 EST 1999
(StriderZ)

Ok, added the *real* E-NetGraph to cvs. Coded by Daniel Erat 
(http://www2.ucsc.edu/~erat/). I had no idea this existed, it rocks. It takes 
hella command-line options, but I modified it to use a config file too. It may 
not run at first if your net device is not ppp0 and you don't specify. This 
will be changed. 

-------------------------------------------------------------------------------

Thu Nov 18 18:16:12 GMT 1999
(gilbertt)

Working towards cool new E-ScreenShoot features.

They're not there yet though :)
